[gd_scene load_steps=73 format=2]

[ext_resource path="res://Characters/Player.gd" type="Script" id=1]
[ext_resource path="res://Characters/UI/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/Heroes/hero-female-dark-sprite.png" type="Texture" id=3]
[ext_resource path="res://Audio/Sounds/Attacks/Player/swipe.wav" type="AudioStream" id=4]
[ext_resource path="res://Images/Heroes/hero-female-emission-sprite.png" type="Texture" id=5]
[ext_resource path="res://Images/UI/Cursors/ui-cursor-icon-open.png" type="Texture" id=6]
[ext_resource path="res://Images/UI/Cursors/ui-cursor-icon-object.png" type="Texture" id=7]
[ext_resource path="res://Images/Effects/Lights/light.png" type="Texture" id=8]
[ext_resource path="res://Audio/Sounds/Attacks/Player/fireball.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/Sounds/Attacks/Player/heal.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/Sounds/Attacks/Player/walk.wav" type="AudioStream" id=11]
[ext_resource path="res://Characters/SoundWalking.gd" type="Script" id=12]
[ext_resource path="res://Images/UI/Cursors/ui-cursor-icon-defense.png" type="Texture" id=13]
[ext_resource path="res://Images/UI/Cursors/ui-cursor-icon-structures.png" type="Texture" id=14]
[ext_resource path="res://Images/UI/Cursors/ui-cursor-icon-mushrooms.png" type="Texture" id=15]
[ext_resource path="res://Images/UI/Cursors/ui-cursor-icon-enemy.png" type="Texture" id=16]
[ext_resource path="res://Images/UI/Cursors/ui-cursor-icon-boss.png" type="Texture" id=17]
[ext_resource path="res://Images/UI/Cursors/ui-cursor-icon-door.png" type="Texture" id=18]
[ext_resource path="res://Images/UI/Cursors/ui-cursor-icon-question.png" type="Texture" id=19]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.00003
height = 7.02235

[sub_resource type="Shader" id=87]
code = "shader_type canvas_item;
uniform sampler2D emission_texture;
uniform vec4 glow_color : hint_color = vec4(1.0);

void fragment()
{
	vec4 current_color = texture(TEXTURE,UV);
	vec4 emission_color = texture(emission_texture, UV);
	
	if(emission_color.r > 0f)
	{
		COLOR = (emission_color + glow_color)
	}
	else
	{
		COLOR = current_color; // we aren't over an emission pixel leave alone
	}
}"

[sub_resource type="ShaderMaterial" id=88]
shader = SubResource( 87 )
shader_param/glow_color = Color( 1, 1, 1, 1 )
shader_param/emission_texture = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 177, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 354, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 531, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 708, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 2832, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 3009, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 3186, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 3363, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 3540, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 3717, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 3894, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 4071, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 4248, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 4425, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 4602, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 4779, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 4956, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 5133, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 5310, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 9027, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 9204, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 9381, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 9558, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 9735, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 9912, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 10089, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 10266, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 10443, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 10620, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 10797, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 3 )
region = Rect2( 10974, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 3 )
region = Rect2( 11151, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 3 )
region = Rect2( 11328, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 3 )
region = Rect2( 11505, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 3 )
region = Rect2( 11682, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 3 )
region = Rect2( 11859, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 885, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 1062, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 1239, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 1416, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 1593, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 1770, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 1947, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 2124, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 2301, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 2478, 0, 177, 74 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 2655, 0, 177, 74 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 47 ), SubResource( 47 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "melee",
"speed": 15.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 46 ), SubResource( 46 ) ],
"loop": true,
"name": "throw",
"speed": 15.0
} ]

[sub_resource type="Environment" id=86]
background_mode = 4
glow_intensity = 0.11
glow_strength = 0.56
glow_blend_mode = 0
glow_hdr_threshold = 0.38
glow_hdr_luminance_cap = 45.25
glow_hdr_scale = 1.95

[node name="Player" type="KinematicBody2D" groups=["Player"]]
z_as_relative = false
collision_layer = 10
collision_mask = 77
script = ExtResource( 1 )

[node name="BubbleIcons" type="Node2D" parent="."]

[node name="OpenIcon" type="Sprite" parent="BubbleIcons"]
position = Vector2( 25, -17 )
texture = ExtResource( 6 )

[node name="ObjectIcon" type="Sprite" parent="BubbleIcons"]
position = Vector2( 25, -17 )
texture = ExtResource( 7 )

[node name="DefenseIcon" type="Sprite" parent="BubbleIcons"]
position = Vector2( 25, -17 )
texture = ExtResource( 13 )

[node name="StructureIcon" type="Sprite" parent="BubbleIcons"]
position = Vector2( 25, -17 )
texture = ExtResource( 14 )

[node name="MushroomIcon" type="Sprite" parent="BubbleIcons"]
position = Vector2( 25, -17 )
texture = ExtResource( 15 )

[node name="EnemyIcon" type="Sprite" parent="BubbleIcons"]
position = Vector2( 25, -17 )
texture = ExtResource( 16 )

[node name="BossIcon" type="Sprite" parent="BubbleIcons"]
position = Vector2( 25, -17 )
texture = ExtResource( 17 )

[node name="DoorIcon" type="Sprite" parent="BubbleIcons"]
position = Vector2( 25, -17 )
texture = ExtResource( 18 )

[node name="QuestionIcon" type="Sprite" parent="BubbleIcons"]
position = Vector2( 25, -17 )
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.358, 12.859 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
margin_left = -14.7225
margin_top = -25.0
margin_right = 25.2775
margin_bottom = 6.27937

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 88 )
position = Vector2( 0, -15 )
z_as_relative = false
frames = SubResource( 25 )
animation = "death"

[node name="Light2D" type="Light2D" parent="."]
light_mask = 7
position = Vector2( 0.641525, 0.859184 )
scale = Vector2( 2.63349, 2.50224 )
texture = ExtResource( 8 )
energy = 0.28
shadow_color = Color( 0.0352941, 0.027451, 0.027451, 0 )
shadow_filter_smooth = 6.2

[node name="SoundFireBall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -8.117

[node name="SoundHeal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -4.566

[node name="SoundWalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -0.393

[node name="SoundWalking" type="AudioStreamPlayer" parent="."]
script = ExtResource( 12 )
audio_files = [ null, null, null ]

[node name="SoundSwipe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.769
pitch_scale = 1.02

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 86 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="health_updated" from="." to="HealthBar" method="_on_health_updated"]
[connection signal="melee" from="." to="." method="_on_Player_melee"]
[connection signal="shoot" from="." to="." method="_on_Player_shoot"]
